Dark mode fix

--- a/packages/special-pages/pages/release-notes/app/components/App.module.css
+++ b/packages/special-pages/pages/release-notes/app/components/App.module.css
@@ -1,5 +1,4 @@
 body {
-    background: var(--background-color);
     color: var(--text-primary-color);
     margin: var(--sp-6) 0 var(--sp-8);
 }
